# squadro

./: .env  .gitignore  MANIFEST.in  README.md  agent.py  basic_agent.py  basic_agent2.py  contest_agent.py  contest_agent_cleaned.py  contest_agent_from_scratch.py  coverage.conf  cronos  human_agent.py  mkdocs.yml  print_network.py  pyproject.toml  pytest.ini  requirements.txt  smart_agent.py  smart_agent_for_training.py  squadro.py  squadro_no_GUI.py  state.py  template_agent.py  test_model_DNN.py  test_mypi.sh  test_performance.py  training.py  training_with_smart_agent.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml
docs/: index.md  installation.md
notebooks/: benchmark.ipynb
resources/: squadro.xcf
scripts/: release.sh  test_mypi.sh
scripts/runpod/: install.sh  rsync.sh  ssh.sh
squadro/: __init__.py  _test_MCTS.py  _test_model_DNN.py  agent.py  animated_game.py  basic_agent.py  basic_agent2.py  benchmarking.py  board.py  compare_DNN.py  compare_DNN_with_other.py  contest_agent.py  contest_agent_cleaned.py  contest_agent_from_scratch.py  game.py  human_agent.py  minimax.py  myqueue.py  mystack.py  random_agent.py  run.py  smart_agent.py  smart_agent_for_training.py  squadro_demo.py  squadro_state.py  state.py  template_agent.py  test_MCTS.py  test_grad.py  trainingDNN.py  training_dnn.py  training_smart_agent.sh  training_with_eval_function.py  training_with_smart_agent.py
squadro/agents/: agent.py  alphabeta_agent.py  basic_agent.py  basic_agent2.py  best.py  contest_agent.py  contest_agent_cleaned.py  contest_agent_from_scratch.py  human_agent.py  montecarlo_agent.py  random_agent.py  smart_agent.py  smart_agent_for_training.py  template_agent.py
squadro/agents_to_triage/: contest_agent  contest_agent_cleaned  contest_agent_cleaned.py  contest_agent_from_scratch  contest_agent_from_scratch.py
squadro/algorithms/: minimax.py
squadro/animation/: animated_game.py  board.py  dynamic_board.py
squadro/core/: benchmarking.py  game.py
squadro/data/: smart_agent_data.csv
squadro/evaluators/: advancement.py  channels.py  constant.py  evaluator.py  rl.py  rollout.py
squadro/ml/: channels.py
squadro/state/: state.py
squadro/state/evaluators/: advancement.py  base.py  constant.py  evaluator.py  ml.py  rl.py  rollout.py
squadro/tests/: base.py  conftest.py  test_animation.py  test_best.py  test_game.py  test_logger.py  test_random_agent.py  test_state.py  test_tree.py  tools.py
squadro/tests/agents/: test_alphabeta_agent.py  test_human_agent.py  test_montecarlo_agent.py  test_random_agent.py
squadro/tests/animation/: test_animation.py
squadro/tests/core/: test_game.py  test_state.py
squadro/tests/evaluators/: test_advancement_evaluator.py  test_deep_q_learning_evaluator.py  test_q_learning_evaluator.py  test_rollout_evaluator.py  tools.py
squadro/tests/ml/: test_back_propagation.py  test_model.py  test_tensor.py
squadro/tests/tools/: test_best.py  test_logger.py  test_tree.py
squadro/tests/training/: dql_data.pkl  test_deep_q_learning.py  test_q_learning.py
squadro/tests/training/data/: dql_data.pkl  results.pkl
squadro/tools/: agents.py  animation.py  arrays.py  basic.py  constants.py  dates.py  disk.py  elo.py  evaluation.py  log.py  logger.py  logs.py  ml.py  notebooks.py  plotting.py  probabilities.py  serialize.py  state.py  timer.py  tree.py  utils.py
squadro/training/: buffer.py  constants.py  deep_q_learning.py  q_learning.py
